kubernetes/apps/home-automation/vrm-mqtt-bridge/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vrm-mqtt-bridge
  namespace: home-automation
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vrm-mqtt-bridge
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-automation
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mosquitto
      ports:
        - protocol: TCP
          port: 1883
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
